--- a/NEWS
+++ b/NEWS
@@ -1,1 +1,22 @@
-See docs/news.rst
+In the News: 
+https://www.smashingmagazine.com/2019/07/ultimate-guide-scalable-web-scrapers-scrapy/
+
+Videos: 
+Scrapy for Beginners - A Complete How To Example Web Scraping Project
+(12/2020)
+https://www.youtube.com/watch?v=s4jtkzHhLzY
+
+Python Scrapy Tutorial - Cats & Spiders? Web Scraping Reddit with Scrapy [2020]
+(02/2020)
+https://www.youtube.com/watch?v=ogPMCpcgb-E
+
+Intro To Web Crawlers & Scraping With Scrapy
+(01/2020)
+https://www.youtube.com/watch?v=ALizgnSFTwQ
+
+Python Scrapy Tutorial- 1 - Web Scraping, Spiders and Crawling 
+(01/2019)
+https://www.youtube.com/watch?v=ve_0h4Y8nuI&list=PLhTjy8cBISEqkN-5Ku_kXG4QW33sxQo0t
+
+
+
